@@ -1,3 +1,7 @@
+2010-06-22  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Set background color to lightcyan.
+
 2010-06-21  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-site.el: Enable global-semantic-decoration-mode for include.
